--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=system
 spring.data.jdbc.dialect=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/ms-vendas
-spring.datasource.password=msvendas
-spring.datasource.username=lvsolution
+spring.datasource.password=
+spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=update
 
 
